--- a/EntryNow.Web/Pages/Entries/Index.razor
+++ b/EntryNow.Web/Pages/Entries/Index.razor
@@ -784,7 +784,7 @@
 
         try
         {
-            await GetEntriesCount();
+            //await GetEntriesCount();
 
             query = null;
 
